2007-02-28  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb:
	- Send a ascr/gdut event after having merged a scriptable addition sdef ;
	- Do not set the same constant twice.

2007-02-27  Laurent Sansonetti  <lsansonetti@apple.com>

	* AUTHORS:
	Added Wes and Terry.

	* sample/Mail/get_selected_mail.rb:
	Added new Mail/TextEdit sample, contributed by Terry Donoghue.

2007-02-20  Laurent Sansonetti  <lsansonetti@apple.com>

	* sample/iTunes/tag_genre_lastfm.rb:
	Added new iTunes sample, contributed by Wes Rogers <wesrog@gmail.com> and
	slightly modified to tag the selected tracks and not only the current track.

2007-02-17  Laurent Sansonetti  <lsansonetti@apple.com>

	* tests/tc_get_app.rb,
	  src/rbosa_err.c,
	  src/lib/rbosa.rb,
	  src/rbosa.c,
	  src/rbosa_sdef.c:
	- Better error messages ;
	- Accept OSA.app('AppName', :option => ...) syntax ;
	- Updated test cases.

	* src/lib/rbosa.rb,
	  tests/tc_textedit.rb:
	Make sure we properly validate the command arguments number, added some test
	cases.

	* src/lib/rbosa.rb,
	  src/rbosa.c,
	  src/rbosa_sdef.c:
	- Now automatically retrieving the remote application sdef ;
	- Honors the 'id' attribute of the sdef format ;
	- Be smarter when converting types from Ruby to OSA, making sure primitive
	  types are always converted ;
	- Fixed a memory leak.

2007-02-05  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/rbosa.c,
	  src/rbosa_sdef.c,
	  src/rbosa.h:
	Added an SPI to get the list of processes running on a remote machine.

	* src/lib/rbosa.rb,
	  src/rbosa_sdef.c:
	- API change for OSA.app and #merge: the :by_* prefixes of keywords have been
	  removed (for example, OSA.app(:path => '...') instead of 
	  OSA.app(:by_path => '...')) ;
	- Added the possibility to control remote applications, by passing the 
	  :machine keyword (:username and :password can also be used but they are not
	  mandatory). Work is still in progress.

	* bin/rdoc-osa,
	  sample/misc/sdef.rb,
	  tests/tc_get_app.rb,